# iamgroot-demo

./: Cargo.toml  README.md  a.txt  b.txt  live_rs.txt  live_sh.txt  output.txt  rpc.sh
blocks/: 0.json  777777.json  778412.json  778413.json
examples/: rpc.rs
gen-build-proxy/: Cargo.toml  README.md  build.rs
gen-build-proxy/src/: main.rs
gen-impl-server/: Cargo.toml  b.txt  x.json
gen-impl-server/src/: generated.rs  implemented.rs
src/: generated.rs  implemented.rs  jsonrpc.rs  lib.rs  main.rs
