[package]
name = "iamgroot"
version = "0.0.0"
edition = "2021"
description = "TBD"
license = "MIT"

[dependencies]

# Dependencies necessary for generated code to build
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.17"
regex = "1.7"

# Dependencies neccessary to serve the RPC using axum
tokio = { version = "1.25", features = ["full"] }
axum = "0.6"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
