[package]
name = "gen-build-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.6"
tokio = { version = "1.25", features = ["full"] }
once_cell = "1.17"
regex = "1.7"
reqwest = { version = "0.11", features = ["json", "blocking"] }
dotenv = "0.15.0"
iamgroot = "0.1"
log = "0.4.17"
env_logger = "0.10.0"

[build-dependencies]
iamgroot = "0.1"
